# araviscam

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
araviscam/: BlackflyCam.py  __init__.py  camera.py
docs/: araviscam.rst  conf.py  index.rst  modules.rst
etc/: cameras.yaml
fieldrotation/: HomTrans.py
