[tool.poetry]
name = "sdss-araviscam"
version = "0.1.110"
description = "Blackfly S GigE camera reader for SDSS-V/LVM"
authors = ["Richard J. Mathar <mathar@mpia-hd.mpg.de>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["SDSS-V","LVM"]
packages = [
    { include = "araviscam" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Scientific/Engineering :: Astronomy",
]
homepage = "https://wiki.sdss.org"
repository = "https://github.com/sdss/araviscam"

include = ["LICENSE", "README.md", "araviscam/*", "etc/*", 
	"docs/*"
]

exclude = [ "*.fits", "dist/*", "PKG-INFO"
]

[tool.poetry.dependencies]
# note there may be other packages that need higher python versions....
python = ">=3.7,<4"
sdss-basecam = ">=0.5.0"
PyGObject = ">=3.38.0"

# there is no dependence on asyncio or math here: this is in stdlib since python3.3

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "BlackflyCam:main"
